# ocaml-iocp

./: .gitignore  README.md  dune  dune-project  iocp.opam  iocp.opam.template
.github/workflows/: ci.yml  test.yml
src/: accept_buffer.ml  dune  handle.ml  handle.mli  heap.ml  heap.mli  intf.ml  iocp.ml  iocp.mli  iocp_stubs.c  managed.ml  overlapped.ml  overlapped.mli  raw.ml  raw.mli  safest.ml  sockaddr.ml  sockaddr.mli  wsabuf.ml
test/: README.md  copy.ml  copy_lib.ml  cptest.ml  dune  latency.ml  net.ml  pipe.expected  pipe.ml  read.ml  safe_net.ml  t1.ml  test.md
