(executables
 (names copy net safe_net)
 (modules copy net safe_net)
 (libraries iocp))

(test
 (name pipe)
 (modules pipe)
 (libraries iocp))

(executable
 (name t1)
 (modules t1)
 (libraries iocp alcotest threads))

(rule
 (alias runtest)
 (deps ./test.md)
 (target ./test.out)
 (action
  (run ./copy.exe ./test.md ./test.out)))

(rule
 (alias runtest)
 (action
  (run ./t1.exe)))
